# soc-analyst-env

./: .gitignore  Dockerfile  README.md  hackathon_graders.py  inference.py  openenv.yaml  pyproject.toml
server/: soc_analyst_environment.py
soc_analyst_env/: README.md  __init__.py  client.py  graders.py  models.py  openenv.yaml  tasks.py
soc_analyst_env/data/: easy.json  find_compromised_account.json  hard.json  identify_malicious_ip.json  medium.json  recommend_firewall_rule.json
soc_analyst_env/server/: __init__.py  app.py  soc_analyst_environment.py
