# Copyright (c) Meta Platforms, Inc. and affiliates.
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-soc-analyst-env"
version = "0.1.0"
description = "Synthetic SOC analyst triage environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "soc_analyst_env.server.app:main"

[tool.setuptools]
include-package-data = true

# Discover packages under ./soc_analyst_env/ (do NOT map soc_analyst_env to ".", or a root
# `pip install .` installs an empty/wrong tree and `soc_analyst_env.graders` is missing).
[tool.setuptools.packages.find]
where = ["."]
include = ["soc_analyst_env*"]

[tool.setuptools.package-data]
soc_analyst_env = ["data/*.json"]
